--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fontsource/fira-mono": "^5.0.8",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.1.1",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
