--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"start": "node build",
+		"start": "node -r dotenv/config build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -34,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.18.0",
-		"@auth/sveltekit": "^0.3.11"
+		"@auth/sveltekit": "^0.3.11",
+		"dotenv": "^16.3.1"
 	}
 }
